force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c.object-meta.xml
<CustomObject>
    <label>Form Field Mapping Entry</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Form Field Mapping Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Mapping Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>