force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c/fields/echosign_dev1__Disable__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>