force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c/fields/echosign_dev1__Field_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Field_Reference_Name__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>