force-app/main/default/objects/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c/fields/echosign_dev1__Form_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Form_Field_Mapping__c</fullName>
    <label>Form Field Mapping</label>
    <referenceTo>echosign_dev1__SIGN_Form_Field_Mapping__c</referenceTo>
    <relationshipLabel>Form Field Mapping Entries</relationshipLabel>
    <relationshipName>Object_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>